--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "root": true,
   "env": {
     "browser": true,
     "es6": true
@@ -22,5 +23,5 @@
   "rules": {
     "import/no-extraneous-dependencies": ["error", { "peerDependencies": true }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
-  },
+  }
 }
