experimental context injection
Turns out I should just learn Mobx

--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "prop-types": "15.x"
   },
   "dependencies": {
+    "deep-freeze": "0.0.1",
+    "deepmerge": "^1.3.2",
     "object.omit": "^2.0.1"
   },
   "jest": {
