--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "eslint-plugin-react": "^7.0.1",
     "jest": "^20.0.1",
     "object.omit": "^2.0.1",
-    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4",
@@ -59,13 +58,13 @@
   },
   "peerDependencies": {
     "react": "15.x",
-    "react-dom": "15.x",
-    "prop-types": "15.x"
+    "react-dom": "15.x"
   },
   "dependencies": {
     "deep-freeze": "0.0.1",
     "deepmerge": "^1.3.2",
-    "object.omit": "^2.0.1"
+    "object.omit": "^2.0.1",
+    "prop-types": "15.x"
   },
   "jest": {
     "globals": {
