--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
+    "cssnano": "^3.10.0",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.0",
@@ -38,6 +39,10 @@
     "eslint-plugin-react": "^7.0.1",
     "jest": "^20.0.1",
     "object.omit": "^2.0.1",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-import": "^10.0.0",
+    "postcss-nested": "^2.0.2",
+    "postcss-simple-vars": "^4.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4",
@@ -49,10 +54,10 @@
     "rollup-plugin-livereload": "^0.4.0",
     "rollup-plugin-multi-entry": "^2.0.1",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-postcss": "^0.4.3",
+    "rollup-plugin-postcss": "^0.5.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-serve": "^0.3.0",
-    "rollup-plugin-uglify": "^1.0.2",
+    "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^3.2.2",
     "uglify-js-harmony": "^2.7.7"
   },
