--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -23,6 +23,7 @@
   ],
   "rules": {
     "import/no-extraneous-dependencies": ["error", { "peerDependencies": true }],
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/forbid-prop-types": "off"
   }
 }
