Trying to stop everything from re-rendering
We were using forceUpdate() whenever our store changed.  Now, we’re using React’s state to trigger changes.  React state is no synchronous, which I read is why Mobx(), a main inspiration for our state engine, doesn’t use it.  But their library is “old” and I think state might work now.  Anyhow, changing our store now only updates the components that are indeed changing.

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "deep-freeze": "0.0.1",
     "deepmerge": "^1.3.2",
+    "equals": "^1.0.5",
     "object.omit": "^2.0.1",
     "prop-types": "15.x"
   },
