Dot and DotGroup
Navigation dots created.  They are actually buttons.  The consumer of this module has to style them.

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": ["es2015-rollup", "react"],
   "plugins": [
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-object-rest-spread"
   ],
   "env": {
     "test": {
