--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
   "scripts": {
-    "test": "jest",
+    "test": "BABEL_ENV=test jest --no-cache",
     "dev": "NODE_ENV=development rollup -w -c rollup.config.dev.js",
     "build": "NODE_ENV=production rollup -c rollup.config.cjs.js && NODE_ENV=production rollup -c rollup.config.es.js"
   },
@@ -22,10 +22,10 @@
   "homepage": "https://github.com/mrbinky3000/react-carousel#readme",
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
@@ -38,7 +38,8 @@
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-react": "^7.0.1",
-    "jest": "^20.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^20.0.4",
     "object.omit": "^2.0.1",
     "postcss-cssnext": "^2.11.0",
     "postcss-import": "^10.0.0",
@@ -74,9 +75,6 @@
     "prop-types": "15.x"
   },
   "jest": {
-    "globals": {
-      "PRODUCTION": false
-    },
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|scss)$": "identity-obj-proxy"
