savepoint for tests

--- a/.babelrc
+++ b/.babelrc
@@ -19,7 +19,6 @@
             "react"
          ],
          "plugins":[
-            "transform-es2015-modules-commonjs",
             "transform-class-properties",
             "transform-object-rest-spread",
             [
@@ -27,7 +26,8 @@
                {
                   "runtimeHelpers":true
                }
-            ]
+            ],
+            "transform-es2015-modules-commonjs"
          ]
       }
    }
