--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-carousel",
-  "version": "1.0.0",
-  "description": "A highly unopinionated suite of react components for creating a carousel.",
+  "name": "pure-react-carousel",
+  "version": "1.0.4",
+  "description": "A highly impartial suite of React components that can be assembled by the consumer to create a carousel with almost no limits on DOM structure or CSS styles. If you're tired of fighting some other developer's CSS and DOM structure, this carousel is for you.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
