--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
+    "clone": "^2.1.1",
     "cssnano": "^3.10.0",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
