Completed testing to 100% coverage.  Found missing binding in Store class.

--- a/package.json
+++ b/package.json
@@ -87,6 +87,9 @@
       "/dev/",
       "/dist/"
     ],
+    "testMatch": [
+      "**/__tests__/**.test.js?(x)"
+    ],
     "collectCoverage": true,
     "coverageDirectory": "coverage",
     "collectCoverageFrom": [
