--- a/.babelrc
+++ b/.babelrc
@@ -1,32 +1,17 @@
 {
-   "presets":[
-      "es2015-rollup",
-      "react"
-   ],
-   "plugins":[
+   "presets": [
+  		["es2015", {"modules": false}],
+  		"react"
+  	],
+   "plugins": [
       "transform-class-properties",
-      "transform-object-rest-spread"
+      "transform-object-rest-spread",
+      "external-helpers"
    ],
-   "env":{
-      "test":{
-         "presets":[
-            [
-               "es2015",
-               {
-                  "modules":false
-               }
-            ],
-            "react"
-         ],
-         "plugins":[
-            "transform-class-properties",
-            "transform-object-rest-spread",
-            [
-               "transform-runtime",
-               {
-                  "runtimeHelpers":true
-               }
-            ],
+   "env": {
+      "test": {
+         "plugins": [
+            ["transform-runtime", { "runtimeHelpers": true }],
             "transform-es2015-modules-commonjs"
          ]
       }
