babel transform for Object.assign() support to IE11
Reluctantly supporting ie11.

--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
    "plugins": [
       "transform-class-properties",
       "transform-object-rest-spread",
+      "transform-object-assign",
       "external-helpers"
    ],
    "env": {
