--- a/.eslintrc
+++ b/.eslintrc
@@ -17,5 +17,7 @@
   ],
   "rules": {
     "indent": ["error", 2]
+    "import/no-named-as-default": ["error", 0],
+    "import/no-named-as-default-member": ["error", 0]
   }
 }
