--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,7 @@
     "plugin:import/warnings"
   ],
   "rules": {
-    "indent": ["error", 2]
+    "indent": ["error", 2],
     "import/no-named-as-default": ["error", 0],
     "import/no-named-as-default-member": ["error", 0]
   }
