Example7 savepoint before updating rollup
After adding react-redux to investigate a reported but with context, I discoverted that Rollup has issues with redux.  https://github.com/reactjs/react-redux/issues/643  Saving before upgrading rollup.

--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "postcss-simple-vars": "^4.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.6",
     "react-test-renderer": "^15.5.4",
+    "redux": "^3.7.2",
     "regenerator-runtime": "^0.10.5",
     "replace-in-file": "^2.5.3",
     "rollup": "^0.41.6",
