--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
     "clone": "^2.1.1",
     "cssnano": "^3.10.0",
-    "enzyme": "^2.8.2",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "escape-string-regexp": "^1.0.5",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.0",
@@ -53,16 +55,17 @@
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-react": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^20.0.4",
+    "jest": "^21.2.1",
     "object.omit": "^2.0.1",
     "postcss-cssnext": "^2.11.0",
     "postcss-import": "^10.0.0",
     "postcss-modules": "^0.8.0",
     "postcss-simple-vars": "^4.0.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "raf": "^3.4.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
-    "react-test-renderer": "^15.5.4",
+    "react-test-renderer": "^16.1.1",
     "redux": "^3.7.2",
     "regenerator-runtime": "^0.10.5",
     "replace-in-file": "^2.5.3",
@@ -82,8 +85,8 @@
     "watch": "^1.0.2"
   },
   "peerDependencies": {
-    "react": "15.x",
-    "react-dom": "15.x"
+    "react": "15.x || 16.x",
+    "react-dom": "15.x || 16.x"
   },
   "dependencies": {
     "deep-freeze": "0.0.1",
@@ -129,6 +132,7 @@
         "lines": 95,
         "statements": 95
       }
-    }
+    },
+    "setupFiles": ["raf/polyfill"]
   }
 }
