--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "watch": "^1.0.2"
   },
   "peerDependencies": {
-    "react": "15.x",
-    "react-dom": "15.x"
+    "react": "15.x || 16.x",
+    "react-dom": "15.x || 16.x"
   },
   "dependencies": {
     "deep-freeze": "0.0.1",
