--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
@@ -53,12 +54,13 @@
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-react": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^20.0.4",
+    "jest": "^21.2.1",
     "object.omit": "^2.0.1",
     "postcss-cssnext": "^2.11.0",
     "postcss-import": "^10.0.0",
     "postcss-modules": "^0.8.0",
     "postcss-simple-vars": "^4.0.0",
+    "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -129,6 +131,7 @@
         "lines": 95,
         "statements": 95
       }
-    }
+    },
+    "setupFiles": ["raf/polyfill"]
   }
 }
