Added new file and typings folder

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "postbuild": "node postbuild.js",
     "build:watch": "watch 'npm run build' src"
   },
+  "files": ["dist", "typings"],
+  "typings": "typings/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/express-labs/pure-react-carousel.git"
