adding under investigation to the label

--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -8,6 +8,7 @@ exemptLabels:
   - security
   - work in progress
   - help wanted
+  - under investigation
 # Label to use when marking an issue as stale
 staleLabel: wontfix
 # Comment to post when marking an issue as stale. Set to `false` to disable
