--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/express-labs/pure-react-carousel#readme",
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
@@ -45,29 +45,29 @@
     "babel-preset-react": "^6.24.1",
     "clone": "^2.1.1",
     "cssnano": "^3.10.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "escape-string-regexp": "^1.0.5",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.0",
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-mrb3k-jest": "^0.3.2",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
-    "object.omit": "^2.0.1",
+    "object.omit": "^3.0.0",
     "postcss-cssnext": "^2.11.0",
     "postcss-import": "^10.0.0",
     "postcss-modules": "^0.8.0",
     "postcss-simple-vars": "^4.0.0",
-    "raf": "^3.4.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-test-renderer": "^16.2.0",
-    "redux": "^3.7.2",
+    "raf": "^3.4.1",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-redux": "^5.1.0",
+    "react-test-renderer": "^16.6.0",
+    "redux": "^4.0.1",
     "regenerator-runtime": "^0.10.5",
     "replace-in-file": "^2.5.3",
     "rollup": "^0.53.3",
@@ -91,10 +91,9 @@
   },
   "dependencies": {
     "deep-freeze": "0.0.1",
-    "deepmerge": "^1.3.2",
+    "deepmerge": "^2.2.1",
     "equals": "^1.0.5",
-    "object.omit": "^2.0.1",
-    "prop-types": "15.x"
+    "prop-types": "^15.6.2"
   },
   "jest": {
     "moduleNameMapper": {
