--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   ],
   "scripts": {
     "test": "BABEL_ENV=test jest --no-cache",
-    "dev": "NODE_ENV=development rollup -w -c rollup.config.dev.js",
+    "start": "NODE_ENV=development rollup -w -c rollup.config.dev.js",
+    "lint": "eslint . --ext .js --ext .jsx",
+    "lint:fix": "eslint ./src --fix --ext .js --ext .jsx",
     "prebuild": "rimraf dist",
     "build": "NODE_ENV=production rollup -c rollup.config.cjs.js && NODE_ENV=production rollup -c rollup.config.es.js",
     "postbuild": "node postbuild.js",
@@ -33,6 +35,7 @@
   },
   "homepage": "https://github.com/express-labs/pure-react-carousel#readme",
   "devDependencies": {
+    "acorn": "^6.0.4",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
@@ -44,7 +47,7 @@
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
     "clone": "^2.1.1",
-    "cssnano": "^3.10.0",
+    "cssnano": "^4.1.7",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "escape-string-regexp": "^1.0.5",
@@ -57,11 +60,12 @@
     "eslint-plugin-react": "^7.11.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
+    "node-sass": "^4.10.0",
     "object.omit": "^3.0.0",
-    "postcss-cssnext": "^2.11.0",
-    "postcss-import": "^10.0.0",
-    "postcss-modules": "^0.8.0",
-    "postcss-simple-vars": "^4.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-modules": "^1.4.1",
+    "postcss-preset-env": "^6.4.0",
+    "postcss-simple-vars": "^5.0.1",
     "raf": "^3.4.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
@@ -69,19 +73,19 @@
     "react-test-renderer": "^16.6.0",
     "redux": "^4.0.1",
     "regenerator-runtime": "^0.10.5",
-    "replace-in-file": "^2.5.3",
+    "replace-in-file": "^3.4.2",
     "rollup": "^0.67.0",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-eslint": "^5.0.0",
-    "rollup-plugin-livereload": "^0.4.0",
+    "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-multi-entry": "^2.0.1",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-postcss": "^0.5.0",
-    "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-serve": "^0.3.0",
-    "rollup-plugin-uglify": "^2.0.1",
-    "rollup-watch": "^3.2.2",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-serve": "^0.6.0",
+    "rollup-plugin-uglify": "^6.0.0",
+    "rollup-watch": "^4.3.1",
     "uglify-es": "^3.3.5",
     "watch": "^1.0.2"
   },
