developer tests now working

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,8 +4,11 @@
     "es6": true
   },
   "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module"
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+    },
   },
   "plugins": [
     "node"
