--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "escape-string-regexp": "^1.0.5",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-mrb3k-jest": "^0.3.2",
+    "eslint-config-mrb3k-jest": "^1.3.0",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-react": "^7.11.1",
