--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lint:fix": "eslint ./src --fix --ext .js --ext .jsx",
     "prebuild": "rimraf dist",
     "build": "NODE_ENV=production rollup -c rollup.config.cjs.js && NODE_ENV=production rollup -c rollup.config.es.js",
+    "build:commonjs": "NODE_ENV=production rollup -c rollup.config.cjs.js",
+    "build:es": "NODE_ENV=production rollup -c rollup.config.es.js",
     "postbuild": "node postbuild.js",
     "build:watch": "watch 'npm run build' src"
   },
@@ -81,6 +83,7 @@
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-serve": "^0.6.0",
     "rollup-plugin-uglify": "^6.0.0",
+    "rollup-plugin-uglify-es": "0.0.1",
     "rollup-watch": "^4.3.1",
     "uglify-es": "^3.3.5",
     "watch": "^1.0.2"
