--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   ],
   "scripts": {
     "test": "BABEL_ENV=test jest --no-cache",
-    "dev": "NODE_ENV=development rollup -w -c rollup.config.dev.js",
+    "start": "NODE_ENV=development rollup -w -c rollup.config.dev.js",
+    "lint": "eslint . --ext .js --ext .jsx",
+    "lint:fix": "eslint ./src --fix --ext .js --ext .jsx",
     "prebuild": "rimraf dist",
     "build": "NODE_ENV=production rollup -c rollup.config.cjs.js && NODE_ENV=production rollup -c rollup.config.es.js",
+    "build:commonjs": "NODE_ENV=production rollup -c rollup.config.cjs.js",
+    "build:es": "NODE_ENV=production rollup -c rollup.config.es.js",
     "postbuild": "node postbuild.js",
     "build:watch": "watch 'npm run build' src"
   },
@@ -33,7 +37,8 @@
   },
   "homepage": "https://github.com/express-labs/pure-react-carousel#readme",
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
+    "acorn": "^6.0.4",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
@@ -44,44 +49,42 @@
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
     "clone": "^2.1.1",
-    "cssnano": "^3.10.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "escape-string-regexp": "^1.0.5",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.0",
-    "eslint-config-mrb3k-jest": "^0.3.2",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-mrb3k-jest": "^1.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.0.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
-    "object.omit": "^2.0.1",
-    "postcss-cssnext": "^2.11.0",
-    "postcss-import": "^10.0.0",
-    "postcss-modules": "^0.8.0",
-    "postcss-simple-vars": "^4.0.0",
-    "raf": "^3.4.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-test-renderer": "^16.2.0",
-    "redux": "^3.7.2",
+    "node-sass": "^4.10.0",
+    "object.omit": "^3.0.0",
+    "raf": "^3.4.1",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-redux": "^5.1.0",
+    "react-test-renderer": "^16.6.0",
+    "redux": "^4.0.1",
     "regenerator-runtime": "^0.10.5",
-    "replace-in-file": "^2.5.3",
-    "rollup": "^0.53.3",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.2.1",
-    "rollup-plugin-eslint": "^3.0.0",
-    "rollup-plugin-livereload": "^0.4.0",
+    "replace-in-file": "^3.4.2",
+    "rollup": "^0.67.0",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-eslint": "^5.0.0",
+    "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-multi-entry": "^2.0.1",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-postcss": "^0.5.0",
-    "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-serve": "^0.3.0",
-    "rollup-plugin-uglify": "^2.0.1",
-    "rollup-watch": "^3.2.2",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-serve": "^0.6.0",
+    "rollup-plugin-uglify": "^6.0.0",
+    "rollup-plugin-uglify-es": "0.0.1",
+    "rollup-watch": "^4.3.1",
     "uglify-es": "^3.3.5",
     "watch": "^1.0.2"
   },
@@ -91,10 +94,9 @@
   },
   "dependencies": {
     "deep-freeze": "0.0.1",
-    "deepmerge": "^1.3.2",
+    "deepmerge": "^2.2.1",
     "equals": "^1.0.5",
-    "object.omit": "^2.0.1",
-    "prop-types": "15.x"
+    "prop-types": "^15.6.2"
   },
   "jest": {
     "moduleNameMapper": {
