--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,6 +1,12 @@
 {
   "root": true,
   "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "ecmaFeatures": {
+      "jsx": true
+    },
+  },
   "env": {
     "browser": true,
     "es6": true
@@ -13,10 +19,7 @@
   "extends": [
     "airbnb"
   ],
-  "ecmaFeatures": {
-    "experimentalObjectRestSpread": true,
-    "jsx": true
-  },
+
   "plugins": [
     "react",
     "jsx-a11y"
@@ -24,6 +27,7 @@
   "rules": {
     "import/no-extraneous-dependencies": ["error", { "peerDependencies": true }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/forbid-prop-types": "off"
+    "react/forbid-prop-types": "off",
+    "react/destructuring-assignment": [0, "never"],
   }
 }
