--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build:commonjs": "NODE_ENV=production rollup -c rollup.config.cjs.js",
     "build:es": "NODE_ENV=production rollup -c rollup.config.es.js",
     "postbuild": "node postbuild.js",
-    "build:watch": "watch 'npm run build' src"
+    "build:watch": "watch 'npm run build' src",
+    "deploy": "gh-pages -d dev"
   },
   "typings": "typings/index.d.ts",
   "repository": {
@@ -61,6 +62,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "gh-pages": "^2.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
     "node-sass": "^4.10.0",
@@ -77,6 +79,7 @@
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-eslint": "^5.0.0",
+    "rollup-plugin-img": "^1.1.0",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-multi-entry": "^2.0.1",
     "rollup-plugin-node-resolve": "^3.4.0",
