--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
+  "files": [
+    "dist/**/*"
+  ],
   "keywords": [
     "react",
     "carousel",
