bugfix: need to publish typings folder

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "typings/**/*"
   ],
   "keywords": [
     "react",
