--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,90 @@
+// {
+//   "presets": [
+//     ["@babel/preset-env", { "modules": false }],
+//     "@babel/preset-react"
+//   ],
+//   "plugins": [
+//     "@babel/plugin-proposal-class-properties",
+//     "@babel/plugin-proposal-object-rest-spread",
+//     "@babel/plugin-transform-object-assign",
+//     "@babel/plugin-external-helpers"
+//   ],
+//   "env": {
+//     "test": {
+//       "plugins": [
+//         ["@babel/plugin-transform-runtime", { "runtimeHelpers": true }],
+//         "transform-es2015-modules-commonjs"
+//       ]
+//     }
+//   }
+// }
+
 {
-   "presets": [
-  		["env", {"modules": false}],
-  		"react"
-  	],
-   "plugins": [
-      "transform-class-properties",
-      "transform-object-rest-spread",
-      "transform-object-assign",
-      "external-helpers"
-   ],
-   "env": {
-      "test": {
-         "plugins": [
-            ["transform-runtime", { "runtimeHelpers": true }],
-            "transform-es2015-modules-commonjs"
-         ]
-      }
-   }
+  "env": {
+    "development": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "browsers": ["> 5%", "Explorer 11"]
+            }
+          }
+        ],
+        "@babel/preset-react"
+      ],
+      "plugins": [
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-transform-object-assign"
+        // latest version of rollup-plugin-babel already applies external helpers for us.
+        // "@babel/plugin-external-helpers"
+      ]
+    },
+    "build": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "browsers": ["> 5%", "Explorer 11"]
+            }
+          }
+        ],
+        "@babel/preset-react"
+      ],
+      "plugins": [
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-transform-object-assign",
+        "@babel/plugin-external-helpers"
+      ]
+    },
+    "test": {
+      // difference is that we don't use external-helpers
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "browsers": ["> 5%", "Explorer 11"],
+              "node": "current"
+            }
+          }
+        ],
+        "@babel/preset-react"
+      ],
+      "plugins": [
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-transform-object-assign",
+        [
+          "@babel/plugin-transform-runtime",
+          {
+            "regenerator": true
+          }
+        ]
+      ]
+    }
+  }
 }
