--- a/.babelrc
+++ b/.babelrc
@@ -41,7 +41,7 @@
         // "@babel/plugin-external-helpers"
       ]
     },
-    "build": {
+    "production": {
       "presets": [
         [
           "@babel/preset-env",
@@ -56,8 +56,7 @@
       "plugins": [
         "@babel/plugin-proposal-class-properties",
         "@babel/plugin-proposal-object-rest-spread",
-        "@babel/plugin-transform-object-assign",
-        "@babel/plugin-external-helpers"
+        "@babel/plugin-transform-object-assign"
       ]
     },
     "test": {
