--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pure-react-carousel",
-  "version": "1.21.2",
+  "version": "1.22.0",
   "description": "A highly impartial suite of React components that can be assembled by the consumer to create a responsive, aria compliant, carousel with almost no limits on DOM structure or CSS styles. If you're tired of fighting some other developer's CSS and DOM structure, this carousel is for you.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -21,8 +21,8 @@
     "test": "BABEL_ENV=test jest --no-cache",
     "test:watch": "BABEL_ENV=test jest --watch",
     "start": "NODE_ENV=development rollup -w -c rollup.config.dev.js",
-    "lint": "eslint . --ext .js --ext .jsx",
-    "lint:fix": "eslint ./src --fix --ext .js --ext .jsx",
+    "lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore",
+    "lint:fix": "eslint ./src --fix --ext .js --ext .jsx --ignore-path .gitignore",
     "prebuild": "rimraf dist",
     "build": "NODE_ENV=production rollup -c rollup.config.cjs.js && NODE_ENV=production rollup -c rollup.config.es.js",
     "build:commonjs": "NODE_ENV=production rollup -c rollup.config.cjs.js",
@@ -43,18 +43,18 @@
   },
   "homepage": "https://github.com/express-labs/pure-react-carousel#readme",
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "@types/react": "^16.7.6",
     "acorn": "^6.0.4",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "babel-preset-react": "^6.24.1",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "clone": "^2.1.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
@@ -69,32 +69,33 @@
     "eslint-plugin-react": "^7.11.1",
     "gh-pages": "^2.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^21.2.1",
+    "jest": "^24.9.0",
     "node-sass": "^4.12.0",
     "object.omit": "^3.0.0",
     "raf": "^3.4.1",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-redux": "^5.1.0",
     "react-test-renderer": "^16.6.0",
     "redux": "^4.0.1",
     "regenerator-runtime": "^0.10.5",
     "replace-in-file": "^3.4.2",
-    "rollup": "^1.11.3",
-    "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup": "^1.20.3",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-img": "^1.1.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-multi-entry": "^2.0.1",
-    "rollup-plugin-node-resolve": "^4.2.3",
+    "rollup-plugin-livereload": "^1.0.1",
+    "rollup-plugin-multi-entry": "^2.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.0",
+    "rollup-plugin-uglify": "^6.0.3",
     "rollup-plugin-uglify-es": "0.0.1",
     "rollup-watch": "^4.3.1",
     "uglify-es": "^3.3.5",
+    "waait": "^1.0.5",
     "watch": "^1.0.2"
   },
   "peerDependencies": {
@@ -102,6 +103,7 @@
     "react-dom": "15.x || 16.x"
   },
   "dependencies": {
+    "@babel/runtime": "^7.5.5",
     "deep-freeze": "0.0.1",
     "deepmerge": "^2.2.1",
     "equals": "^1.0.5",
@@ -147,6 +149,9 @@
     },
     "setupFiles": [
       "raf/polyfill"
-    ]
+    ],
+    "testEnvironmentOptions": {
+      "resources": "usable"
+    }
   }
 }
