--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,19 @@
         "ideas",
         "projectManagement"
       ]
+    },
+    {
+      "login": "tim-steele",
+      "name": "Timothy Steele",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/1490225?v=4",
+      "profile": "http://www.whoistimsteele.com",
+      "contributions": [
+        "code",
+        "design",
+        "review",
+        "ideas",
+        "projectManagement"
+      ]
     }
   ],
   "contributorsPerLine": 7
