--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -35,6 +35,15 @@
         "ideas",
         "projectManagement"
       ]
+    },
+    {
+      "login": "TheFullResolution",
+      "name": "Jedrzej Lewandowski",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/11708648?v=4",
+      "profile": "http://www.thefullresolution.com/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
