--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -44,6 +44,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "express-crowbot",
+      "name": "express-crowbot",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/38323435?v=4",
+      "profile": "https://github.com/express-crowbot",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
