--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -53,6 +53,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "littlejustinh",
+      "name": "Justin Little",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/7610833?v=4",
+      "profile": "https://github.com/littlejustinh",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
