Add @NormySan as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -62,6 +62,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "NormySan",
+      "name": "Christoffer Palm",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/3884281?v=4",
+      "profile": "http://www.paax.se/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
