Add @dylanpyle as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -71,6 +71,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "dylanpyle",
+      "name": "Dylan Pyle",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/806257?v=4",
+      "profile": "https://dylanpyle.com",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
