--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -80,6 +80,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "maps82",
+      "name": "Martin Schwier",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/12223156?v=4",
+      "profile": "https://github.com/maps82",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
