--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -89,6 +89,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "arnaudambro",
+      "name": "Arnaud Ambroselli",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/31724752?v=4",
+      "profile": "https://github.com/arnaudambro",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
