Add @chungwong as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -98,6 +98,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "chungwong",
+      "name": "Chung",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/1691249?v=4",
+      "profile": "https://github.com/chungwong",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
