Add @fdionisi as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -107,6 +107,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "fdionisi",
+      "name": "Federico Dionisi",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/8927326?v=4",
+      "profile": "https://github.com/fdionisi",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
