--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -116,6 +116,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "KubaJastrz",
+      "name": "Jakub Jastrzębski",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/6443113?v=4",
+      "profile": "https://kubajastrz.com",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
