--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -125,6 +125,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "jpdelima",
+      "name": "Jean-Paul Delimat",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/7547716?v=4",
+      "profile": "https://github.com/jpdelima",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
