--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -134,6 +134,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "martinmckenna",
+      "name": "Martin",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/7387001?v=4",
+      "profile": "https://atmarty.com/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
