--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -143,6 +143,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "perenstrom",
+      "name": "Per Enström",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/765759?v=4",
+      "profile": "https://github.com/perenstrom",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
