--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -152,6 +152,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "serafinomb",
+      "name": "Serafino Messina",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/4272911?v=4",
+      "profile": "https://github.com/serafinomb",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
