Add @killia15 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -161,6 +161,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "killia15",
+      "name": "Seth Killian",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/30830235?v=4",
+      "profile": "https://github.com/killia15",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
