Add @zoeyzou as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -179,6 +179,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "zoeyzou",
+      "name": "Zoey Zou",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/13701719?v=4",
+      "profile": "http://pleo.io",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
