Add @djshapiro as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -188,6 +188,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "djshapiro",
+      "name": "djshapiro",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/2005881?v=4",
+      "profile": "https://github.com/djshapiro",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
