--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,9 @@ coverage.json
 .DS_Store
 .npmrc
 
-/.idea
+.idea/
+
+# these cause more harm than good
+# when working with contributors
+package-lock.json
+yarn.lock
