--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,19 @@
+sudo: false
 language: node_js
-node_js: "6"
-after_success: npm test
+cache:
+  directories:
+    - ~/.npm
+notifications:
+  email: false
+node_js:
+  - '8'
+  - '10'
+  - '12'
+install: npm i && npm i -g codecov
+script: npm test
+jobs:
+  include:
+    - stage: release
+      if: branch = master AND type != pull_request
+      node_js: '10'
+      script: npm run semantic-release
