--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ node_js:
   - '8'
   - '10'
   - '12'
-install: npm i && npm i -g codecov
-script: npm test
+install: npm i
+script: npm run lint && npm run test
 jobs:
   include:
     - stage: release
