--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -9,6 +9,7 @@ exemptLabels:
   - work in progress
   - help wanted
   - under investigation
+  - bug
 # Label to use when marking an issue as stale
 staleLabel: stale
 # Comment to post when marking an issue as stale. Set to `false` to disable
