--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react": "7.14.3",
     "gh-pages": "^2.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
