--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,9 @@ coverage.json
 .DS_Store
 .npmrc
 
-/.idea
+.idea/
 
-# Yarn files
+# these cause more harm than good
+# when working with contributors
+package-lock.json
 yarn.lock
