--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,23 @@
+sudo: false
 language: node_js
-node_js: "6"
-after_success: npm test
+cache: npm
+notifications:
+  email: false
+node_js:
+  - 8
+  - 10
+  - 12
+install:
+  - npm i
+  # as requested by the React team :)
+  # https://reactjs.org/blog/2019/10/22/react-release-channels.html#using-the-next-channel-for-integration-testing
+  - if [ "$TRAVIS_EVENT_TYPE" = "cron" ]; then npm install react@next react-dom@next; fi
+script:
+  - npm run lint
+  - npm run test
+jobs:
+  include:
+    - stage: release
+      if: branch = master AND type != pull_request
+      node_js: 10
+      script: npm run semantic-release
