ci(deploy): run gh-pages command after successfully publishing

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ jobs:
       if: branch = master AND type != pull_request
       node_js: 10
       script: npm run semantic-release
-      deploy: npm run deploy
+      after_success: npm run deploy
