--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,8 @@
   "rules": {
     "indent": ["error", 2],
     "import/no-named-as-default": ["error", 0],
-    "import/no-named-as-default-member": ["error", 0]
+    "import/no-named-as-default-member": ["error", 0],
+    "linebreak-style": 0
+
   }
 }
