Updated deps, made compatible with win development and set up scoped package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pure-react-carousel",
-  "version": "0.0.0-semantically-released",
+  "name": "@idmadj/pure-react-carousel",
+  "version": "1.29.1",
   "description": "A highly impartial suite of React components that can be assembled by the consumer to create a responsive and aria compliant carousel with almost no limits on DOM structure or CSS styles.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -21,16 +21,16 @@
     "commit": "git-cz",
     "commit:add": "git add .",
     "commit:all": "npm run commit:add && npm run commit",
-    "test": "BABEL_ENV=test jest --no-cache",
-    "test:coverage": "BABEL_ENV=test jest --coverage --no-cache",
-    "test:watch": "BABEL_ENV=test jest --watch",
-    "start": "NODE_ENV=development rollup -w -c rollup.config.dev.js",
+    "test": "cross-env BABEL_ENV=test jest --no-cache",
+    "test:coverage": "cross-env BABEL_ENV=test jest --coverage --no-cache",
+    "test:watch": "cross-env BABEL_ENV=test jest --watch",
+    "start": "cross-env NODE_ENV=development rollup -w -c rollup.config.dev.js",
     "lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore",
     "lint:fix": "eslint ./src --fix --ext .js --ext .jsx --ignore-path .gitignore",
     "prebuild": "rimraf dist",
-    "build": "NODE_ENV=production rollup -c rollup.config.cjs.js && NODE_ENV=production rollup -c rollup.config.es.js",
-    "build:commonjs": "NODE_ENV=production rollup -c rollup.config.cjs.js",
-    "build:es": "NODE_ENV=production rollup -c rollup.config.es.js",
+    "build": "cross-env NODE_ENV=production rollup -c rollup.config.cjs.js && NODE_ENV=production rollup -c rollup.config.es.js",
+    "build:commonjs": "cross-env NODE_ENV=production rollup -c rollup.config.cjs.js",
+    "build:es": "cross-env NODE_ENV=production rollup -c rollup.config.es.js",
     "postbuild": "node postbuild.js",
     "build:watch": "watch 'npm run build' src",
     "prepublishOnly": "npm run build",
@@ -41,14 +41,14 @@
   "typings": "typings/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/express-labs/pure-react-carousel.git"
+    "url": "git+https://github.com/idmadj/pure-react-carousel.git"
   },
   "author": "Matthew Toledo",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/express-labs/pure-react-carousel"
+    "url": "https://github.com/idmadj/pure-react-carousel"
   },
-  "homepage": "https://github.com/express-labs/pure-react-carousel#readme",
+  "homepage": "https://github.com/idmadj/pure-react-carousel#readme",
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-external-helpers": "^7.2.0",
@@ -64,6 +64,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "clone": "^2.1.1",
     "commitizen": "^3.0.7",
+    "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^2.1.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
@@ -89,7 +90,7 @@
     "redux": "^4.0.1",
     "regenerator-runtime": "^0.10.5",
     "replace-in-file": "^3.4.2",
-    "rollup": "^1.20.3",
+    "rollup": "^1.32.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-eslint": "^5.0.0",
@@ -97,12 +98,13 @@
     "rollup-plugin-livereload": "^1.0.1",
     "rollup-plugin-multi-entry": "^2.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-postcss": "^2.9.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.3",
     "rollup-plugin-uglify-es": "0.0.1",
     "rollup-watch": "^4.3.1",
+    "sass": "^1.32.7",
     "semantic-release": "^15.13.3",
     "uglify-es": "^3.3.5",
     "waait": "^1.0.5",
