--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pure-react-carousel",
-  "version": "0.0.0-semantically-released",
+  "version": "0.0.0-development",
   "description": "A highly impartial suite of React components that can be assembled by the consumer to create a responsive and aria compliant carousel with almost no limits on DOM structure or CSS styles.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
